--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@ body.menuToggled {
   flex: 5;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 0 2rem;
+  padding: 1rem 2rem;
 }
 
 .galleryContainer {
